# sailfish

./: .gitattributes  .gitignore  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY  appveyor.yml  codecov.yml  index.html  netlify.toml  requirements.txt  rustfmt.toml  sailfish.code-workspace
.github/: stale.yml
.github/workflows/: badge.yml  coverage.yml  doc.yml  test.yml
assets/javascripts/workers/templates/: actix.stpl
benches/: Cargo.toml  README.md
benches/benches/: all.rs
benches/src/: askama_bench.rs  build.rs  fomat.rs  handlebars.rs  horrorshow_bench.rs  lib.rs  liquid.rs  markup_bench.rs  maud_bench.rs  ramhorns.rs  ructe.rs  sailfish.rs  std_write.rs  tera.rs  yarte_bench.rs  yarte_bytes.rs  yarte_fixed.rs
benches/templates/: big-table.hbs  big-table.stpl  teams.hbs  teams.stpl
benches/templates_ructe/: big_table.rs.html  teams.rs.html
docs/en/: mkdocs.yml
docs/en/docs/: getting-started.md  index.md  installation.md  options.md
docs/en/docs/syntax/: filters.md  includes.md  overview.md  tags.md
docs/en/input_docs/: installation.md
docs/en/input_docs/syntax/: overview.md  tags.md
docs/en/output_site/getting-started/: index.html
docs/en/output_site/installation/: index.html
docs/en/output_site/options/: index.html
docs/en/output_site/search/: search_index.json
docs/en/site/: index.html  sitemap.xml
docs/rfcs/: 1-dynamic-loading.md  3-template-trait.md
examples/: Cargo.toml  actix.rs  include.rs  simple.rs
examples/templates/: actix.stpl  header.stpl  include.stpl  simple.stpl
fuzzing-tests/: Cargo.toml
fuzzing-tests/src/: main.rs
getting-started/: index.html
installation/: index.html
integration-tests/: Cargo.toml  README.md
integration-tests/src/: lib.rs
integration-tests/templates/: big-table.out  custom_delimiter.out  custom_delimiter.stpl  include-nest.out  include-nest.stpl  include.out  include.stpl  included.stpl  json.stpl  rm_whitespace.out  teams.out
integration-tests/templates/includes/: include-parent.stpl  rust.rs
integration-tests/tests/: basic.rs  compile.rs  template_once.rs
integration-tests/tests/fails/: invalid_option_value.rs  no_path.rs  repeated_arguments.rs  repeated_arguments.stderr  unbalanced_brace.rs  unbalanced_brace.stderr  unclosed_delimter.rs  unclosed_delimter.stderr  unknown_option.stderr
integration-tests/tests/fails/templates/: unclosed_delimiter.stpl
options/: index.html
resources/: icon.xcf
sailfish/: Cargo.toml  build.rs
sailfish-compiler/: Cargo.toml
sailfish-compiler/src/: analyzer.rs  compiler.rs  config.rs  error.rs  lib.rs  minifier.rs  optimizer.rs  parser.rs  procmacro.rs  resolver.rs  translator.rs  util.rs
sailfish-macros/: Cargo.toml
sailfish-macros/src/: lib.rs
sailfish-tests/fuzzing-tests/: Cargo.toml
sailfish-tests/fuzzing-tests/in/compiler/: compiler2
sailfish-tests/fuzzing-tests/in/escape/: escape1  escape2
sailfish-tests/integration-tests/: Cargo.toml
sailfish-tests/integration-tests/config/: sailfish.toml  sailfish.yml
sailfish-tests/integration-tests/templates/: big-table.out  big-table.stpl  comment.stpl  continue_break.out  continue_break.stpl  filter.out  filter.stpl  filter2.out  filter2.stpl  formatting.out  formatting.stpl  include-nest.out  include-nest.stpl  include-nest_s.out  include-nest_s.stpl  include.out  include.stpl  include_nest.stpl  include_nest_s.stpl  include_rust.stpl  include_rust_s.stpl  json-filter.stpl  json.out  json.stpl  json_filter.out  json_filter.stpl  json_s.stpl  method.out  method.stpl  noescape.out  noescape.stpl  rm_newline.out  rm_whitespace.stpl  rm_whitespace_newline.out  rm_whitespace_newline.stpl  rm_whitespace_newline_s.stpl  rm_whitespace_s.stpl  rust_macro.out  rust_macro.stpl  rust_macro_s.stpl  (+7 more)
sailfish-tests/integration-tests/templates/includes/: rust.rs
sailfish-tests/integration-tests/tests/: compile.rs  config.rs  template.rs  template_mut.rs  template_once.rs  template_simple.rs
sailfish-tests/integration-tests/tests/fails/: invalid_option_value.stderr  missing_semicolon.rs  missing_semicolon.stderr  no_path.stderr  repeated_arguments.stderr  template_not_found.rs  template_not_found.stderr  unbalanced_brace.stderr  unclosed_delimter.stderr  unexpected_token.rs  unexpected_token.stderr  unknown_option.rs  unknown_option.stderr
sailfish-tests/integration-tests/tests/fails/templates/: missing_semicolon.stpl  unbalanced_brace.stpl  unclosed_delimiter.stpl  unexpected_token.stpl
sailfish/src/: axum_support.rs  lib.rs
sailfish/src/runtime/: buffer.rs  filter.rs  integer.rs  macros.rs  mod.rs  render.rs  size_hint.rs  utils.rs
sailfish/src/runtime/escape/: avx2.rs  fallback.rs  mod.rs  naive.rs  sse2.rs
scripts/: build-docs.py  bump-version.sh  count-dependencies.sh  travis.sh
search/: search_index.json
syntax/filters/: index.html
syntax/includes/: index.html
syntax/overview/: index.html
syntax/tags/: index.html
syntax/tree-sitter-sailfish/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py
syntax/tree-sitter-sailfish/bindings/c/: tree-sitter-sailfish.h  tree-sitter-sailfish.pc.in
syntax/tree-sitter-sailfish/bindings/go/: binding.go  binding_test.go  go.mod
syntax/tree-sitter-sailfish/bindings/node/: binding.cc
syntax/tree-sitter-sailfish/bindings/python/tree_sitter_sailfish/: __init__.py  binding.c
syntax/tree-sitter-sailfish/bindings/rust/: build.rs  lib.rs
syntax/tree-sitter-sailfish/queries/: highlights.scm  injections.scm
syntax/tree-sitter-sailfish/src/: grammar.json  node-types.json  parser.c
syntax/tree-sitter-sailfish/test/corpus/: main.txt
syntax/vim/: README.md
syntax/vim/ftdetect/: sailfish.vim
syntax/vim/indent/: sailfish.vim
syntax/vim/syntax/: sailfish.vim
syntax/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
syntax/vscode/src/: extension.ts
syntax/vscode/syntaxes/: sailfish.tmLanguage.json
(+10 files in other folders)
