[workspace]
members = [
  "sailfish",
  "sailfish-compiler",
  "sailfish-macros",
  "examples",
  "integration-tests"
]
exclude = [
  "fuzzing-tests",
  "benches"
]

[profile.dev.package.syn]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
incremental = true

[profile.test.package.syn]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
incremental = true

[profile.release.package.syn]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
incremental = true
