[package]
name = "sailfish-examples"
version = "0.6.0"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
sailfish = { path = "../sailfish" }
sailfish-macros = { path = "../sailfish-macros" }

[[bin]]
name = "simple"
path = "simple.rs"
test = false

[[bin]]
name = "include"
path = "include.rs"
test = false

[[bin]]
name = "actix"
path = "actix.rs"
test = false
