[package]
name = "sailfish-compiler"
version = "0.9.0"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
description = "Simple, small, and extremely fast template engine for Rust"
homepage = "https://github.com/rust-sailfish/sailfish"
repository = "https://github.com/rust-sailfish/sailfish"
readme = "../README.md"
keywords = ["markup", "template", "html"]
categories = ["template-engine"]
license = "MIT"
workspace = ".."
edition = "2018"

[lib]
name = "sailfish_compiler"
doctest = false

[features]
default = ["config"]
procmacro = []
config = ["serde", "toml"]

[dependencies]
memchr = "2.5.0"
quote = { version = "1.0.26", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8.2", optional = true }
home = "0.5.4"
filetime = "0.2.21"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["parsing", "full", "visit-mut", "printing"]

[dependencies.proc-macro2]
version = ">=1.0.11, <1.1.0"
default-features = false
features = ["span-locations"]

[dev-dependencies]
pretty_assertions = "1.3.0"
