[package]
name = "sailfish-compiler"
version = "0.10.2"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
description = "Simple, small, and extremely fast template engine for Rust"
homepage = "https://github.com/rust-sailfish/sailfish"
repository = "https://github.com/rust-sailfish/sailfish"
readme = "../README.md"
keywords = ["markup", "template", "html"]
categories = ["template-engine"]
license = "MIT"
workspace = ".."
edition = "2024"

[lib]
name = "sailfish_compiler"
doctest = false

[features]
default = ["config"]
procmacro = []
config = ["serde", "toml"]

[dependencies]
memchr = "2.8.0"
quote = { version = "1.0.45", default-features = false }
serde = { version = "1.0.228", features = ["derive"], optional = true }
toml = { version = ">=1.1.2", optional = true }
home = "0.5.12"
filetime = "0.2.27"

[dependencies.syn]
version = "2.0.117"
default-features = false
features = ["parsing", "full", "visit-mut", "printing"]

[dependencies.proc-macro2]
version = ">=1.0.106"
default-features = false
features = ["span-locations"]

[dev-dependencies]
pretty_assertions = "1.4.1"
