[package]
name = "sailfish"
version = "0.5.0"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
description = "Simple, small, and extremely fast template engine for Rust"
homepage = "https://github.com/rust-sailfish/sailfish"
repository = "https://github.com/rust-sailfish/sailfish"
readme = "../README.md"
keywords = ["markup", "template", "html"]
categories = ["template-engine"]
license = "MIT"
workspace = ".."
edition = "2018"

[features]
default = ["derive", "perf-inline"]
# automatically import derive macro
derive = ["sailfish-macros"]
# enable json filter
json = ["serde", "serde_json"]
# add more #[inline] attribute
perf-inline = []

[dependencies]
itoap = "1.0.1"
ryu = "1.0.4"
serde = { version = "1.0.111", optional = true }
serde_json = { version = "1.0.53", optional = true }

[dependencies.sailfish-macros]
path = "../sailfish-macros"
version = "0.5.0"
optional = true

[build-dependencies]
version_check = "0.9.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
