[package]
name = "sailfish"
version = "0.11.2"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
description = "Simple, small, and extremely fast template engine for Rust"
homepage = "https://github.com/rust-sailfish/sailfish"
repository = "https://github.com/rust-sailfish/sailfish"
readme = "../README.md"
keywords = ["markup", "template", "html"]
categories = ["template-engine"]
license = "MIT"
workspace = ".."
edition = "2024"

[features]
default = ["config", "derive", "perf-inline"]
# enable configuration file (sailfish.toml) support
config = ["sailfish-macros/config"]
# automatically import derive macro
derive = ["sailfish-macros"]
# enable json filter
json = ["serde", "serde_json"]
# add more #[inline] attribute
perf-inline = []
# avoid writing compiled template files to disk
hermetic = ["sailfish-macros/hermetic"]

[dependencies]
itoap = "1.0.1"
ryu = "1.0.23"
serde = { version = "1.0.228", optional = true }
serde_json = { version = "1.0.150", optional = true }

[dependencies.sailfish-macros]
path = "../sailfish-macros"
version = "0.11.2"
default-features = false
optional = true

[build-dependencies]
version_check = "0.9.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

