[package]
name = "fuzzing-tests"
version = "0.6.1"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.12.2"
sailfish = { path = "../../sailfish", default-features = false }
sailfish-compiler = { path = "../../sailfish-compiler", default-features = false }
