[package]
name = "integration-tests"
version = "0.5.0"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
sailfish = { path = "../../sailfish", default-features = false, features = ["json"] }
sailfish-macros = { path = "../../sailfish-macros" }
sailfish-compiler = { path = "../../sailfish-compiler" }
serde_json = "1.0.53"

[dev-dependencies]
trybuild = "1.0.28"
pretty_assertions = "1.1.0"
