[package]
name = "integration-tests"
version = "0.9.0"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
sailfish = { path = "../../sailfish", features = ["json"] }
sailfish-macros = { path = "../../sailfish-macros" }
sailfish-compiler = { path = "../../sailfish-compiler" }
serde_json = "1.0.95"

[dev-dependencies]
trybuild = "1.0.80"
pretty_assertions = "1.3.0"
