[package]
name = "integration-tests"
version = "0.10.2"
authors = ["Ryohei Machida <orcinus4627@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
sailfish = { path = "../../sailfish", features = ["json"] }
sailfish-macros = { path = "../../sailfish-macros" }
sailfish-compiler = { path = "../../sailfish-compiler" }
serde_json = "1.0.149"

[dev-dependencies]
trybuild = "1.0.116"
pretty_assertions = "1.4.1"
