[package]
name = "tree-sitter-sailfish"
description = "Sailfish grammar for tree-sitter"
version = "0.10.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sailfish"]
categories = ["parsing", "text-editors"]
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
